--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,11 +1,21 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Codleo/Anagrama/blob/master/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "193e94a1-b73d-4ae2-93ac-fdfc49e490f0",
+        "outputId": "447d0125-6d96-47a4-eeeb-37533cc3b0b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -68,7 +78,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
